# rust-ft-raffle

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh
contract-prize/: Cargo.toml
contract-prize/src/: lib.rs
contract-raffle/: Cargo.toml
contract-raffle/src/: internal.rs  lib.rs  raffleticket.rs
